--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="colorPrimary">#292A2D</color>
     <color name="colorPrimaryDark">#1E1F21</color>
     <color name="colorAccent">#FF4081</color>
