--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="fbcolor">#3b5998</color>
     <color name="gcolor">#dd4b39</color>
+    <color name="btmtext">#6b6b76</color>
+    <color name="sign_in">#1fbad6</color>
+    <color name="register">#83838c</color>
 </resources>
