--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -7,17 +7,19 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/editEmail"
-            android:hint="Email"
+            android:hint="@string/email"
             android:text=""
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,11 +31,11 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/editPass"
-            android:hint="Pass"
+            android:hint="@string/password"
             android:text=""
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,11 +47,11 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/editName"
-            android:hint="Name"
+            android:hint="@string/name"
             android:text=""
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -61,11 +63,11 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/editPhone"
-            android:hint="Phone"
+            android:hint="@string/phone"
             android:text=""
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimary"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
