--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,28 +16,26 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-        <android.support.design.widget.TabLayout
+        <LinearLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="?attr/colorPrimary"
             android:elevation="6dp"
-            android:minHeight="?attr/actionBarSize"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/colorAccent"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="#ffffff"
-            app:tabTextColor="#d3d3d3" />
+            android:orientation="horizontal"
+            android:minHeight="?attr/actionBarSize">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
+        </LinearLayout>
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
-            android:layout_above="@+id/tabs"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/toolbar"
+            android:layout_above="@+id/tabs"/>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
