--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="btmtext">#6b6b76</color>
     <color name="sign_in">#1fbad6</color>
     <color name="register">#83838c</color>
+    <color name="transparent">#00000000</color>
 </resources>
